--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -46,7 +46,7 @@
 
     <p>
         If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking of Wiki content from appearing in search engines, participate in the discussion here:
-        <a href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>. Hopefully, GitHub can find a solution to unblock wiki content in harmony with their SEO concerns and GHWSEE can be <a href="#decommissioning">decommissioned</a>.
+        <a href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>. Hopefully, GitHub can find a solution to unblock Wiki content in harmony with their SEO concerns and GHWSEE can be <a href="#decommissioning">decommissioned</a>.
     </p>
     <h2>Usage</h2>
     <ol>
