--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -190,6 +190,10 @@
         </div>
     </article>
 
+    <nav id="index">
+        <a href="{{ index_url }}">Page Index for this GitHub Wiki</a>
+    </nav>
+
     <aside id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub blocks
                     contents of
