Link to suggestion

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -42,6 +42,8 @@
     <p>
         If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
         your community's content as a more stable, blessed, and probably higher search ranking alternative.
+        <a href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis#:~:text=Note%3A%20Search%20engines%20will%20not%20index%20the%20contents%20of%20wikis.%20To%20have%20your%20content%20indexed%20by%20search%20engines%2C%20you%20can%20use%20GitHub%20Pages%20in%20a%20public%20repository."
+        >This alternative is also mentioned in GitHub Docs about their Wikis.</a>
     </p>
 
     <p>
