--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -1,15 +1,14 @@
 <html>
 
 <head>
-    <title>
-        GitHub Wiki SEE
-    </title>
+    <title> About GitHub Wiki SEE </title>
     <style>
         body {
             max-width: 38rem;
             padding: 2rem;
             margin: auto;
         }
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -17,69 +16,60 @@
 <body id="main">
     <h1>GitHub Wiki SEE</h1>
     <p>
-        <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows GitHub Wikis to be indexed by search engines. There's no
-        <a href="/robots.txt"><code>robots.txt</code></a> or headers on this site preventing indexing of wiki content
-        and wiki content proxied from GitHub and served from this service will be crawled and indexed.
+        <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows GitHub Wikis to be indexed by search engines.
+        There is no <a href="/robots.txt"><code>robots.txt</code></a> or header on this site preventing indexing of wiki
+        content and GitHub Wiki content proxied from GitHub and served from this service will be crawled and indexed.
     </p>
-    <p>
-        Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository Wiki
-        pages</a>. As such, GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and this state of affairs can be
-        a very unpleasant surprise if you were looking to share searchable knowledge such as a FAQ on a Wiki!
-        The situation is also uncomfortable for searchers to know that they aren't searching
-        against the full possible world of documentation.
+    <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
+            wiki content</a>. As such, GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and
+        this situation can be a very unpleasant if you were looking to share searchable knowledge such as a FAQ on a
+        Wiki! The situation is also uncomfortable for searchers to know that they aren't searching against the full
+        possible world of documentation. </p>
+    <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
+        page on GitHub for normal usage and a link at the bottom explaining what GHWSEE is. The content of this service
+        is not meant to be read by users and is meant for crawlers. GHWSEE is intended to behave like those
+        StackOverflow content mirroring sites that rank high with "stolen" content from StackOverflow but with far less
+        ad-farming. </p>
+    <p> If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
+        your community's content as a more stable, blessed, and probably higher search ranking alternative. <a
+            href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis#:~:text=Note%3A%20Search%20engines%20will%20not%20index%20the%20contents%20of%20wikis.%20To%20have%20your%20content%20indexed%20by%20search%20engines%2C%20you%20can%20use%20GitHub%20Pages%20in%20a%20public%20repository.">This
+            alternative is also mentioned in GitHub Docs about GitHub Wikis.</a>
     </p>
-    <p>
-        GHWSEE proxies the rendered contents of the pages and has a link at the top to visit the page on GitHub
-        for normal usage and a link at the bottom explaining what GHWSEE is.
-        The content of this service is not meant to be read by users and is meant for crawlers. It is
-        intended to behave like those StackOverflow content mirroring sites but with far less ad-farming.
-    </p>
-    <p>
-        For anti-abuse reasons, all links rendered in the service that are going out of GitHub
-        are tagged with <code>rel="nofollow ugc"</code> as to not affect search engine rankings
-        or to promote mass vandalism of GitHub Wikis.
-    </p>
-    <p>
-        If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
-        your community's content as a more stable, blessed, and probably higher search ranking alternative.
-        <a href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis#:~:text=Note%3A%20Search%20engines%20will%20not%20index%20the%20contents%20of%20wikis.%20To%20have%20your%20content%20indexed%20by%20search%20engines%2C%20you%20can%20use%20GitHub%20Pages%20in%20a%20public%20repository."
-        >This alternative is also mentioned in GitHub Docs about their Wikis.</a>
-    </p>
-
-    <p>
-        If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking of Wiki content from appearing in search engines, participate in the discussion here:
-        <a href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>. Hopefully, GitHub can find a solution to unblock Wiki content in harmony with their SEO concerns and GHWSEE can be <a href="#decommissioning">decommissioned</a>.
-    </p>
+    <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
+        of Wiki content from appearing in search engines, participate in the discussion here: <a
+            href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>.
+        Let us hope that GitHub can find a solution to unblock GitHub Wiki content in harmony with their SEO concerns
+        and GHWSEE can be <a href="#decommissioning">decommissioned</a>. </p>
+    <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
+        <code>rel="nofollow ugc"</code> as to not affect search engine rankings or to promote mass vandalism of GitHub
+        Wikis. </p>
     <h2>Usage</h2>
-    <ol>
-        <li>Use a search engine! That's the intended interface to the content "on" this site.</li>
-    </ol>
-    <p>If you are an editor, edit your page periodically and the
-        <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a>
-        will eventually pick it up and notify search engines! However, the search ranking will be affected by how
-        unique your content is and how well it matches the queries.
-        Generally don't expect a high ranking but your content will probably be on page 2 or 3 which
-         is much better than the previous alternative of not being there at all!
-    </p>
-
-    <p>Note that it may take quite some time for content to be picked up and there is no guarantee it'll be picked up. The mechanism is unreliable.</p>
-
+    <ul>
+        <li>Wiki Reader: Use your favorite search engine! That is the intended interface to the content "on" this
+            service and to get a link to the original GitHub content.</li>
+        <li>Wiki Editor: If you are a GitHub Wiki contributor, simply edit your content periodically and the <a
+                href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a> will eventually
+            pick it up and notify search engines. Because this just isn't GitHub.com, don't expect a high ranking as
+            your content will probably be on page 2, 3, or worse. That is still much better than the previous
+            alternative of not being in the search results at all! Note that it may take quite some time for content to
+            be picked up and there is no guarantee it will be picked up.</li>
+    </ul>
     <h2>Examples</h2>
     <p> These are just examples and testing wikis.</p>
     <ul>
         <li><a href="/m/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
         <li><a href="/m/commaai/openpilot/wiki">commaai/openpilot</a></li>
-        <li><a href="/m/Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams/wiki">Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams</a></li>
+        <li><a
+                href="/m/Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams/wiki">Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams</a>
+        </li>
     </ul>
-
     <h2>Project, README, Source, Issues, and other information</h2>
-
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
-
     <h2 id="decommissioning">Decommissioning</h2>
-
     <p>This site will be decommissioned to redirect old links once the block is lifted.</p>
-    <p>People shouldn't have linked to this site but maybe the warnings weren't big and red enough.</p>
+    <p>People shouldn't have linked to this site but maybe the warnings weren't big and red enough. <a
+            href="https://github.com/nelsonjchen/github-wiki-see-rs/issues/6">Flashing yellow was very unpopular.</a>
+    </p>
 </body>
 
 </html>
