--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -33,8 +33,10 @@
     <p> If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
         your community's content as a more stable, blessed, and probably higher search ranking alternative. <a
             href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis#:~:text=Note%3A%20Search%20engines%20will%20not%20index%20the%20contents%20of%20wikis.%20To%20have%20your%20content%20indexed%20by%20search%20engines%2C%20you%20can%20use%20GitHub%20Pages%20in%20a%20public%20repository.">This
-            alternative is also mentioned in GitHub Docs about GitHub Wikis.</a>
-    </p>
+            alternative is also mentioned in GitHub Docs about GitHub Wikis</a>. <a
+            href="https://github.com/tokio-rs/website/pull/109">Consider adding an "<em>Edit on GitHub</em>" link to the
+            content in a GitHub Pages to have an experience closer to wikis, easily permit editing, and to encourage
+            contributions</a>. </p>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
             href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>.
@@ -71,8 +73,8 @@
             href="https://github.com/nelsonjchen/github-wiki-see-rs/issues/6">Flashing yellow was very unpopular.</a>
     </p>
     <hr>
-    <p> This project is not affiliated with GitHub in any way, if it wasn't obvious from the substandard CSS and code. It
-        started because someone was a bit sad they couldn't tell people to use <a
+    <p> This project is not affiliated with GitHub in any way, if it wasn't obvious from the substandard CSS and code.
+        It started because someone was a bit sad they couldn't tell people to use <a
             href="https://lmgtfy.com">lmgtfy.com</a>. But more importantly, it's a project that was started because
         there was something very wrong with the way GitHub handles wiki content and more people need to know about it.
     </p>
