--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -35,7 +35,7 @@
             href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis#:~:text=Note%3A%20Search%20engines%20will%20not%20index%20the%20contents%20of%20wikis.%20To%20have%20your%20content%20indexed%20by%20search%20engines%2C%20you%20can%20use%20GitHub%20Pages%20in%20a%20public%20repository.">This
             alternative is also mentioned in GitHub Docs about GitHub Wikis</a>. <a
             href="https://github.com/tokio-rs/website/pull/109">Consider adding an "<em>Edit on GitHub</em>" link to the
-            content in a GitHub Pages to have an experience closer to wikis, easily permit editing, and to encourage
+            content on GitHub Pages to have an experience closer to wikis, easily permit editing, and to encourage
             contributions</a>. </p>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
