--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -22,7 +22,7 @@
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
             wiki content</a>. As such, GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and
-        this situation can be a very unpleasant if you were looking to share searchable knowledge such as a FAQ on a
+        this situation can be very unpleasant if you were looking to share searchable knowledge such as a FAQ on a
         Wiki! The situation is also uncomfortable for searchers to know that they aren't searching against the full
         possible world of documentation. </p>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
