--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -22,16 +22,17 @@
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
             wiki content</a>. As such, GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and
-        this situation can be very unpleasant if you were looking to share searchable knowledge such as a FAQ on a
-        Wiki! The situation is also uncomfortable for searchers to know that they aren't searching against the full
-        possible world of documentation. </p>
+        this situation can be very unpleasant if you were looking to share searchable knowledge such as a FAQ on a Wiki!
+        The situation is also uncomfortable for searchers to know that they aren't searching against the full possible
+        world of documentation. </p>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
         page on GitHub for normal usage and a link at the bottom explaining what GHWSEE is. The content of this service
         is not meant to be read by users and is meant for crawlers. GHWSEE is intended to behave like those
         StackOverflow content mirroring sites that rank high with "stolen" content from StackOverflow but with far less
         ad-farming. </p>
     <p> If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
-        your community's content as a more stable, blessed, and probably higher search ranking alternative. <a
+        your community's content as a more crawlable, stable, blessed, and probably higher search ranking alternative.
+        <a
             href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis#:~:text=Note%3A%20Search%20engines%20will%20not%20index%20the%20contents%20of%20wikis.%20To%20have%20your%20content%20indexed%20by%20search%20engines%2C%20you%20can%20use%20GitHub%20Pages%20in%20a%20public%20repository.">This
             alternative is also mentioned in GitHub Docs about GitHub Wikis</a>. <a
             href="https://github.com/tokio-rs/website/pull/109">Consider adding an "<em>Edit on GitHub</em>" link to the
