--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -27,7 +27,7 @@
         world of documentation. </p>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
         page on GitHub for normal usage and a link at the bottom explaining what GHWSEE is. The content of this service
-        is not meant to be read by users and is meant for crawlers. GHWSEE is intended to behave like those
+        is not meant to be read by users and is intended for crawlers. GHWSEE is designed to behave like those
         StackOverflow content mirroring sites that rank high with "stolen" content from StackOverflow but with far less
         ad-farming. </p>
     <p> If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
