--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -18,7 +18,7 @@
     <p>
         <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows GitHub Wikis to be indexed by search engines.
         There is no <a href="/robots.txt"><code>robots.txt</code></a> or header on this site preventing indexing of wiki
-        content and GitHub Wiki content proxied from GitHub and served from this service will be crawled and indexed.
+        content and GitHub Wiki content proxied from GitHub and served from this service can be crawled and indexed.
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
             wiki content</a>. As such, GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and
