--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -49,7 +49,8 @@
     <h2>Usage</h2>
     <ul>
         <li>Wiki Reader: Use your favorite search engine! That is the intended interface to the content "on" this
-            service and to get a link to the original GitHub content.</li>
+            service and to get a link to the original GitHub content. Do not read the content on this site as it may
+            have rendered with errors and is only meant for robots. Go directly to the original page on GitHub.</li>
         <li>Wiki Editor: If you are a GitHub Wiki contributor, simply edit your content periodically and the <a
                 href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a> will eventually
             pick it up and notify search engines. Because this just isn't GitHub.com, don't expect a high ranking as
