--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -7,7 +7,6 @@
     <style>
         body {
             max-width: 38rem;
-            padding: 2rem;
             margin: auto;
         }
 
@@ -180,6 +179,9 @@
         </a>
         <br>
         Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
+        <p>
+            The preview below may have <em>rendering errors</em>. Please visit the Original URL to view the full page.
+        </p>
     </aside>
 
     <article id="content">
@@ -199,8 +201,7 @@
                     contents of
                     GitHub Wiki pages from search engines.</span></a></p>
         <p>⚠️ Content here is for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em>
-            Humans should visit the <a href="{{ original_url }}">Original URL</a> for working links, table of contents
-            and pages, and to view the page as intended!</p>
+            Humans should visit the <a href="{{ original_url }}">Original URL</a>.</p>
     </aside>
 </body>
 
