links may be broken too

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -180,7 +180,7 @@
         <br>
         Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
         <p>
-            The preview below may have <em>rendering errors</em>. Please visit the Original URL to view the full page.
+            The preview below may have <em>rendering errors</em> and <em>broken links</em>. Please visit the Original URL to view the full page.
         </p>
     </aside>
 
