--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -86,7 +86,7 @@
             padding: 0 10px;
         }
 
-        .markdown-body table {
+        table {
             max-width: 100%;
             overflow: auto;
             width: 100%;
