--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -57,6 +57,14 @@
             your content will probably be on page 2, 3, or worse. That is still much better than the previous
             alternative of not being in the search results at all! Note that it may take quite some time for content to
             be picked up and there is no guarantee it will be picked up.</li>
+        <ul>
+            <li>If you would like to greatly increase the chances and ranking of your GitHub Wiki content being indexed,
+                consider adding a link to your content on GHWSEE to a location where search engines can index. For an
+                example of this in action, see how the <a
+                    href="https://github.com/MiSTer-devel/Main_MiSTer#main_mister-main-binary-and-wiki-repo">MiSTer
+                    historical computing and gaming recreation project linked a "crawlable wiki" that GHWSEE serves in
+                    their README</a>. </li>
+        </ul>
     </ul>
     <h2>Examples</h2>
     <p> These are just examples and testing wikis.</p>
