--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -63,7 +63,7 @@
                 example of this in action, see how the <a
                     href="https://github.com/MiSTer-devel/Main_MiSTer#main_mister-main-binary-and-wiki-repo">MiSTer
                     historical computing and gaming recreation project linked a "crawlable wiki" that GHWSEE serves in
-                    their README</a>. </li>
+                    their README on GitHub which can be indexed</a>. </li>
         </ul>
     </ul>
     <h2>Examples</h2>
