--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -8,6 +8,8 @@
         body {
             max-width: 38rem;
             margin: auto;
+            overflow-wrap: break-word;
+            min-width: 0;
         }
 
         img {
