--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -7,6 +7,8 @@
             max-width: 38rem;
             padding: 2rem;
             margin: auto;
+            overflow-wrap: break-word;
+            min-width: 0;
         }
 
     </style>
