--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -24,9 +24,9 @@
         major search engines.
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
-            wiki content</a>. You won't find GitHub.com Wiki content on search engines such as Google and DuckDuckGo.
-        This negatively impacts the effectiveness of FAQs and other knowledge bases on GitHub Wikis. It also negatively
-        impacts users who search for information that may only be found in GitHub Wikis.</p>
+            wiki content</a>. You won't find direct GitHub.com Wiki content on search engines such as Google and
+        DuckDuckGo. This negatively impacts the effectiveness of FAQs and other knowledge bases on GitHub Wikis. It also
+        negatively impacts users who search for information that may only be found in GitHub Wikis.</p>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
         page on GitHub for everyday usage and a link at the bottom explaining what GHWSEE is. The content of this
         service is not meant to be read directly by users and is intended for crawlers. GHWSEE is designed to behave
