--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -82,6 +82,8 @@
         <li><a
                 href="/m/Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams/wiki">Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams</a>
         </li>
+        <li><a href="/m/naver/billboard.js/wiki">naver/billboard.js</a>
+        </li>
     </ul>
     <h2>Project, README, Source, Issues, and other information</h2>
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
