--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -32,7 +32,8 @@
         service is not meant to be read directly by users and is intended for crawlers. GHWSEE is designed to behave
         like those StackOverflow content mirroring sites that rank high with "stolen" content from StackOverflow but
         with far less ad-farming. Unlike its inspiration, GHWSEE has no ads and tries to make it obvious, quick, and
-        easy for users to get to the content they want directly on GitHub.com.</p>
+        easy for users to get to the content they want directly on GitHub.com short of an automatic redirect that may
+        make search engines not crawl the content.</p>
     <p> Another purpose of GHWSEE is to bring awareness to the issue of GitHub Wikis purposefully not being indexed.
         Many are caught off-guard and have produced massive libraries of information that they are unaware of being
         generally invisible to the internet. Likewise, many searching for information in these libraries are not aware
