--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -200,7 +200,7 @@
     </nav>
     <aside id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub blocks
-                    contents of GitHub Wiki pages from search engines.</span></a></p>
+                    GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
 
