--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -184,12 +184,11 @@
 
 <body id="main">
     <aside id="header_button">
-        <a href="{{ original_url }}" class="visit_url_button"> Visit Original URL </a>
+        <a href="{{ original_url }}" class="visit_url_button"> Visit Original URL and Full Page</a>
     </aside>
     <aside id="header_info">
         <br> Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
-        <p> The preview below may have <em>rendering errors</em> and <em>broken links</em>. Please visit the Original
-            URL to view the last updated date and the full page. </p>
+        <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, and does not include the <em>last updated date</em>. Please visit the Original URL to see the full page. </p>
     </aside>
     <article id="content">
         <h1>{{ original_title }}</h1>
