--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -188,7 +188,8 @@
     </aside>
     <aside id="header_info">
         <br> Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
-        <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, and does not include the <em>last updated date</em>. Please visit the Original URL to see the full page. </p>
+        <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, and does not include the
+            <em>last updated date</em>. Please visit the Original URL to see the full page. </p>
     </aside>
     <article id="content">
         <h1>{{ original_title }}</h1>
