--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -188,11 +188,11 @@
 </head>
 
 <body id="main">
-    <aside id="header_button">
-        <a href="{{ original_url }}" class="visit_url_button"> Visit Full Page on GitHub.com</a>
+    <nav id="header_button">
+        <a href="{{ original_url }}" class="visit_url_button"> View Full Page on GitHub.com</a>
         <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, and does not include the
             <em>last updated date.</em></p>
-    </aside>
+    </nav>
     <aside id="header_info">
         <p> Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
         </p>
