Update wording with what's been observed

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -206,7 +206,7 @@
     </nav>
     <aside id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub blocks
-                    GitHub Wikis from search engines.</span></a></p>
+                    many GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
 
