--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -18,15 +18,17 @@
 <body id="main">
     <h1>GitHub Wiki SEE</h1>
     <p>
-        <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows GitHub Wikis to be indexed by search engines. The
-        <a href="/robots.txt"><code>robots.txt</code></a> and headers on this site do not prevent indexing of wiki
-        content and GitHub Wiki content proxied from GitHub and served from this service can be crawled and indexed by
-        major search engines.
+        <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows non-indexed GitHub Wikis to be indexed by search
+        engines. The <a href="/robots.txt"><code>robots.txt</code></a> and headers on this site do not prevent indexing
+        of wiki content and GitHub Wiki content proxied from GitHub and served from this service can be crawled and
+        indexed by major search engines.
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
-            wiki content</a>. You won't find direct GitHub.com Wiki content on search engines such as Google and
-        DuckDuckGo. This negatively impacts the effectiveness of FAQs and other knowledge bases on GitHub Wikis. It also
-        negatively impacts users who search for information that may only be found in GitHub Wikis.</p>
+            wiki content</a> for wikis that are publically editable and some other unknown criteria(s) such as lack of
+        stars. You can find some direct GitHub.com Wiki content on search engines such as Google and DuckDuckGo but not
+        all. This negatively impacts the effectiveness of FAQs and other knowledge bases on GitHub Wikis and also
+        negatively impacts users who search for information that may only be found on those GitHub Wikis that do not
+        meet GitHub's currently ambiguious criteria.</p>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
         page on GitHub for everyday usage and a link at the bottom explaining what GHWSEE is. The content of this
         service is not meant to be read directly by users and is intended for crawlers. GHWSEE is designed to behave
@@ -45,13 +47,17 @@
             alternative is also mentioned in GitHub Docs about GitHub Wikis</a>. <a
             href="https://github.com/tokio-rs/website/pull/109">Consider adding an "<em>Edit on GitHub</em>" link to the
             content on GitHub Pages to have an experience closer to wikis, easily permit editing, and to encourage
-            contributions</a>. This is the official solution which can be burdensome. You are welcome to continue <a
+            contributions</a>. This is the official solution which can be burdensome and you are welcome to continue <a
             href="#usage">using</a> GHWSEE.</a></p>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
             href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>.
         Let us hope that GitHub can find a solution to unblock GitHub Wiki content in harmony with their SEO concerns,
-        and GHWSEE can be <a href="#decommissioning">decommissioned</a>. </p>
+        and GHWSEE can be <a href="#decommissioning">decommissioned</a>. <a
+            href="https://github.com/github/feedback/discussions/4992#discussioncomment-1885558">GitHub does appear to
+            be privately experimenting letting some GitHub Wikis to be indexed if they meet some sort of criteria such
+            as public non-editability and possibly a number of stars requirement, but the exact criteria is currently
+            unknown.</a></p>
     <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
         <code>rel="nofollow ugc"</code> as to not affect search engine rankings or to promote mass vandalism of GitHub
         Wikis. This is in addition to <code>rel="nofollow"</code> in the original content. </p>
