images can be gone

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -182,7 +182,6 @@
                 top: 0em;
             }
         }
-
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -190,8 +189,9 @@
 <body id="main">
     <nav id="header_button">
         <a href="{{ original_url }}" class="visit_url_button"> View Full Page on GitHub.com</a>
-        <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, and does not include the
-            <em>last updated date.</em></p>
+        <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, <em>missing images</em>, and
+            does not include the <em>last updated date.</em>
+        </p>
     </nav>
     <aside id="header_info">
         <p> Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
