--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -19,9 +19,10 @@
     <h1>GitHub Wiki SEE</h1>
     <p>
         <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows non-indexed GitHub Wikis to be indexed by search
-        engines. The <a href="/robots.txt"><code>robots.txt</code></a> and headers on this site do not prevent indexing
-        of wiki content and GitHub Wiki content proxied from GitHub and served from this service can be crawled and
-        indexed by major search engines.
+        engines. The <a href="/robots.txt"><code>robots.txt</code></a> and <a
+            href="https://github.com/github/feedback/discussions/4992#discussioncomment-1448177">headers</a> on this
+        site do not prevent indexing of wiki content and GitHub Wiki content proxied from GitHub and served from this
+        service can be crawled and indexed by major search engines.
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
             wiki content</a> for wikis that are publically editable and some other unknown criteria(s) such as lack of
